<resources>
    <!-- General Strings - BEGIN -->
    <string name="app_name">HeavyConnect</string>
    <string name="google_api_key">AIzaSyDV6N9jcdDOvjbZmnl8Iof4QNaPIGod-Q4</string>
    <string name="action_logout">Logout</string>
    <string name="logout_message">See you soon...</string>
    <!-- General Strings - END -->

    <!-- GridActivity - BEGIN -->
    <string name="grid_equipment">Equipment</string>
    <string name="grid_map">Map</string>
    <string name="grid_settings">Settings</string>
    <string name="grid_exit">Exit</string>
    <string name="grid_user_isnt_logged_in">You need to login...</string>
    <string name="grid_lock">Unlock/Lock</string>
    <!-- GridActivity - END -->

    <!-- EquipmentListActivity - BEGIN -->
    <string name="equip_list_title">Equipment</string>
    <string name="equip_list_add">Add Equipment</string>

    <string name="equip_list_user_isnt_logged_in">You need to login...</string>
    <string name="equip_list_loading">Loading...</string>

    <string name="equip_list_load_failure">Failed when trying to get the equipment list... Try again...</string>
    <!-- EquipmentListActivity - END -->

    <!-- EquipmentRegistrationActivity - BEGIN -->
    <string name="equip_reg_title">Equipment Registration</string>

    <string name="equip_reg_name">Name</string>
    <string name="equip_reg_name_hint">Ex: Tractor</string>

    <string name="equip_reg_model">Model Code</string>
    <string name="equip_reg_model_hint">Ex: F94215614</string>

    <string name="equip_reg_asset">Asset Number</string>
    <string name="equip_reg_asset_hint">Ex: 416510249</string>

    <string name="equip_reg_hour">Engine Hours / Equipment Miles</string>
    <string name="equip_reg_hour_hint">Ex: 100</string>

    <string name="equip_reg_status">Status</string>
    <string name="equip_reg_status_ok">OK</string>
    <string name="equip_reg_status_service">SERVICE</string>
    <string name="equip_reg_status_broken">BROKEN</string>

    <string name="equip_reg_btn_reg">Register</string>
    <string name="equip_reg_btn_clf">Clear</string>

    <string name="equip_reg_btn_remove">Remove</string>
    <string name="equip_reg_btn_map">Map</string>
    <string name="equip_reg_btn_save">Save</string>

    <string name="equip_reg_getting_location">Getting your location...</string>
    <string name="equip_reg_sending">Sending info...</string>
    <string name="equip_reg_user_isnt_logged_in">You need to login...</string>

    <string name="equip_reg_invalid_name">Invalid name! Verify the equipment information and try again.</string>
    <string name="equip_reg_invalid_model_number">Invalid model code! Verify the equipment information and try again.</string>
    <string name="equip_reg_invalid_asset_number">Invalid asset number! Verify the equipment information and try again.</string>
    <string name="equip_reg_invalid_engine_hours_value">Invalid engine hours value! Verify the equipment information and try again.</string>
    <string name="equip_reg_registration_failure">Equipment registration failed. Try again...</string>
    <string name="equip_reg_registration_success">Equipment successfully added.</string>

    <string name="equip_reg_loading">Loading...</string>
    <string name="equip_reg_invalid_equip_id">Invalid equipment ID.</string>
    <string name="equip_reg_successfully_saved">Equipment successfully saved.</string>
    <string name="equip_reg_failed_when_removing">Failed when trying to remove. Try again...</string>
    <string name="equip_reg_successfully_removed">Equipment successfully removed.</string>
    <string name="equip_reg_loading_failure">Failed when loading equipment information. Try again...</string>

    <string name="equip_reg_remove_confirmation">Do you really want to remove this equipment?</string>
    <string name="equip_reg_remove_yes">Remove</string>
    <string name="equip_reg_remove_no">Cancel</string>

    <string name="equip_reg_disabled_gps_error">You need to enable your GPS to proceed...</string>
    <!-- EquipmentRegistrationActivity - END -->

    <!--MapActivity - BEGIN-->
    <string name="map_loading">Loading...</string>
    <string name="map_load_failure">Failed when loading equipment list. Verify your Internet connection and try again...</string>
    <!--MapActivity - END-->

    <!--LoginActivity - BEGIN-->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Login</string>
    <string name="login_register">Register here</string>

    <string name="login_signing_in">Signing in...</string>
    <string name="login_welcome_back">Welcome back</string>

    <string name="login_short_username">Invalid username. Your username must have 3 or more characters.</string>
    <string name="login_short_password">Invalid password. Your password must have 4 or more characters.</string>

    <string name="login_invalid_method">Invalid login method. Contact the support.</string>
    <string name="login_invalid_data">Login failed. After verify your information, try again.</string>
    <string name="login_invalid_username_or_password">Invalid username or password.</string>
    <string name="login_user_no_longer_active">This user is no longer active.</string>
    <string name="login_invalid_username">Invalid username. Verify your information and try again.</string>
    <string name="login_invalid_password">Invalid password. Verify your information and try again.</string>
    <string name="login_sign_in_failure">Login failed! Verify your information and try again...</string>
    <!--LoginActivity - END-->


    <!--RegisterActivity - BEGIN-->
    <string name="register_title">Sign Up</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_sign_up">Sign up</string>
    <string name="register_email">Email</string>

    <string name="register_signing_up">Creating a new user...</string>

    <string name="register_invalid_firstName">Invalid First Name. Verify your information and try again.</string>
    <string name="register_invalid_lastName">Invalist Last Name. Verify your information and try again.</string>
    <string name="register_short_username">Invalid username. Your username must have 3 or more characters.</string>
    <string name="register_short_password">Invalid password. Your password must have 4 or more characters.</string>
    <string name="register_invalid_method">Invalid register method. Contact the support.</string>
    <string name="register_invalid_data">User registration failed. Try again after verify your information.</string>
    <string name="register_invalid_username">Invalid username. Verify your information and try again.</string>
    <string name="register_invalid_password">Invalid password. Verify your information and try again.</string>
    <string name="register_user_already_exists">This user already exists! Try to use another username.</string>
    <string name="register_registration_failed">User registration failed! Try again later...</string>
    <string name="register_registration_success">User successfully registered!</string>
    <!--RegisterActivity - END-->

    <!--SettingsActivity - BEGIN-->
    <string name="settings_title">Settings</string>

    <string-array name="settings_options">
        <!--<item>Update profile</item>-->
        <item>Manage users</item>
        <!--<item>Delete account</item>-->
        <item>About</item>
    </string-array>
    <!--SettingsActivity - END-->


    <!--EmployeeListActivity - BEGIN-->
    <string name="employee_list_title">Users</string>
    <string name="employee_list_add">New user</string>
    <string name="employee_list_need_to_login">You need to log-in...</string>
    <string name="employee_list_loading">Loading...</string>
    <string name="employee_list_load_failure">Failed when trying to load user list. Try again later...</string>
    <!--EmployeeListActivity - END-->

    <!--AddEmployeeActivity - BEGIN-->
    <string name="add_employee_title">User</string>
    <string name="add_employee_firstName">First Name</string>
    <string name="add_employee_lastName">Last Name</string>
    <string name="add_employee_username">Username</string>
    <string name="add_employee_password">Password</string>
    <string name="add_employee_add">Add new User</string>
    <string name="add_employee_save">Save</string>
    <string name="add_employee_remove">Remove</string>
    <string name="add_employee_email">Email</string>
    <string name="add_employee_sending">Sending information...</string>
    <string name="add_employee_registration_failure">Failed when tried to save user information... Try again...</string>
    <string name="add_employee_invalid_first_name">Invalid First Name. Verify your information and try again.</string>
    <string name="add_employee_invalid_last_name">Invalid Last Name. Verify your information and try again.</string>
    <string name="add_employee_invalid_username">Invalid Username. Your username needs to be at least 3 characters long. Verify your information and try again.</string>
    <string name="add_employee_invalid_password">Invalid Password. Your password needs to be at least 4 characters long. Verify your information and try again.</string>
    <string name="add_employee_invalid_email">Invalid Email. Verify your information and try again.</string>
    <string name="add_employee_isnt_logged_in">You need to login...</string>
    <string name="add_employee_successfully_saved">User successfully saved.</string>
    <string name="add_employee_registration_success">User successfully added.</string>
    <string name="add_employee_confirm_remove">Do you really want to remove this user?</string>
    <string name="add_employee_confirm_yes">Yes</string>
    <string name="add_employee_confirm_no">No</string>
    <!--AddEmployeeActivity - END-->

    <!--AboutDialog-->
    <string name="about_title">About</string>
    <string name="about_site">http://heavyconnect.com/</string>
    <string name="about_version">Version</string>
    <!--AboutDialog-->

    <!--RemoveAccountDialog - BEGIN -->
    <string name="remove_account_dialog_remove_manager_account_message">Are you sure you want to delete your account? This will delete all the users you have registered along with all registered equipment.</string>
    <string name="remove_account_dialog_confirm_button">Confirm</string>
    <string name="remove_account_dialog_cancel_button">Cancel</string>
    <string name="remove_account_dialog_title">Remove your account</string>
    <!--RemoveAccountDialog - END -->

    <!--Bluetooth-->
    <!--<string name="app_name">BlueControl</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <!--Fuel Consumption -->
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="fuel_consumption_label">Current Fuel Consumption Rate</string>
    <string name="equipment_selection">Select Equipment</string>
    <string name="fuel_flow">Fuel Flow</string>

</resources>