<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:layout_width="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/heavyconnect_logo"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login_username"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SectionText"/>

    <EditText
        android:id="@+id/login_username"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login_password"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SectionText" />

    <EditText
        android:id="@+id/login_password"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/login_sign_in"
        android:text="@string/login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_button_bg"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:textAppearance="@style/SectionText"
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:text="@string/login_register"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
</LinearLayout>
