<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipmentRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_above="@+id/linearLayout">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin"
            android:layout_width="match_parent">

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/register_firstName"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_firstName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/register_lastName"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_lastName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/register_email"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_email"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/register_username"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_username"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/register_password"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_password"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/register_bt"
                android:text="@string/register_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_bg"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
