<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_above="@+id/linearLayout">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin"
            android:layout_width="match_parent">

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/add_employee_firstName"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/add_employee_firstName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/add_employee_lastName"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/add_employee_lastName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/add_employee_email"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/add_employee_email"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/add_employee_username"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/add_employee_username"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAppearance="@style/SectionText"
                android:layout_width="wrap_content"
                android:text="@string/add_employee_password"
                android:layout_height="wrap_content"
                android:id="@+id/add_employee_password_text"/>

            <EditText
                android:id="@+id/add_employee_password"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_employee_add"
                    android:text="@string/add_employee_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_button_bg"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/add_employee_edit_ly">

                    <Button
                        android:id="@+id/add_employee_save"
                        android:text="@string/add_employee_save"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/green_button_bg"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginRight="2dp" />

                    <Button
                        android:id="@+id/add_employee_remove"
                        android:text="@string/add_employee_remove"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/green_button_bg"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginLeft="2dp" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
